tests/compile_fail/not_on_a_function.rs
use caching::caching;

#[caching(key_expr = a)]
struct A;

fn main() {}
