tests/compile_fail/not_on_a_function.stderr
error: expected `fn`
 --> tests/compile_fail/not_on_a_function.rs:4:1
  |
4 | struct A;
  | ^^^^^^
